Fixed x overflow

--- a/assets/sass/john-static-website/_carousel.scss
+++ b/assets/sass/john-static-website/_carousel.scss
@@ -4,7 +4,6 @@
 
 .carousel-item {
   height: 100vh;
-  min-height: 300px;
   background: no-repeat left center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -23,5 +22,14 @@
     background: no-repeat center bottom;
     background-size: cover;
     height: 80vh;
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .carousel-item {
+    background: no-repeat center center;
+    background-size: cover;
+    height: 250px;
+    margin-top: 62px; 
   }
 }
